[package]
name = "striped"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["stripe", "api"]
categories = ["web-programming", "api-bindings"]
description = "Stripe API"
repository = "https://github.com/apibillme/striped"
readme = "README.md"

[dependencies]
