[package]
name = "upcloud"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["upcloud", "api"]
categories = ["web-programming", "api-bindings"]
description = "UpCloud API"
repository = "https://github.com/apibillme/upcloud"
readme = "README.md"

[dependencies]
